--- a/Assets/Scenes/MainUI.yaml
+++ b/Assets/Scenes/MainUI.yaml
@@ -220,7 +220,7 @@ GameObjects:
     PassIndex: 6
     Hovering: true
     Com_Transform:
-      Position: [167.802216, 130.936859]
+      Position: [167.802216, 80.0945435]
       Size: [264.524719, 103.957817]
     Com_VIBuffer:
       TexturePath: ..\..\Assets\UITexture\Hud\FX_UI_ListBar.png
@@ -245,15 +245,15 @@ GameObjects:
     Instancing: false
     Type: UI
     SortingOrder: 0
-    PassIndex: 1
+    PassIndex: 14
     Hovering: false
     Com_Transform:
-      Position: [419.231598, 410.842316]
-      Size: [860.464111, 2998.01318]
+      Position: [419.231598, 360]
+      Size: [832.248352, 720]
     Com_VIBuffer:
       TexturePath: ..\..\Assets\UITexture\Hud\WindowBg.png
       TextureMaskPath: ""
-      TextureNoisePath: ""
+      TextureNoisePath: ..\..\Assets\UITexture\BackImg\Window_BG_ETC_5.dds
       TextureAnyPath: ""
       Color: [0, 0, 0, 1]
     Children:
@@ -270,7 +270,7 @@ GameObjects:
     PassIndex: 1
     Hovering: false
     Com_Transform:
-      Position: [167.802002, 109.016418]
+      Position: [167.802002, 58.1741028]
       Size: [264.524994, 1]
     Com_VIBuffer:
       TexturePath: ..\..\Assets\UITexture\Hud\HpHud.png
@@ -288,7 +288,7 @@ GameObjects:
     PassIndex: 6
     Hovering: true
     Com_Transform:
-      Position: [167.802002, 259.08667]
+      Position: [167.802002, 208.244354]
       Size: [264.524994, 103.958]
     Com_VIBuffer:
       TexturePath: ..\..\Assets\UITexture\Hud\FX_UI_ListBar.png
@@ -316,7 +316,7 @@ GameObjects:
     PassIndex: 1
     Hovering: false
     Com_Transform:
-      Position: [167.802002, 238.852081]
+      Position: [167.802002, 188.009766]
       Size: [264.524994, 1]
     Com_VIBuffer:
       TexturePath: ..\..\Assets\UITexture\Hud\HpHud.png
@@ -838,7 +838,7 @@ GameObjects:
     PassIndex: 6
     Hovering: true
     Com_Transform:
-      Position: [167.802002, 390]
+      Position: [167.802002, 339.157684]
       Size: [264.524994, 103.958]
     Com_VIBuffer:
       TexturePath: ..\..\Assets\UITexture\Hud\FX_UI_ListBar.png
@@ -866,7 +866,7 @@ GameObjects:
     PassIndex: 1
     Hovering: false
     Com_Transform:
-      Position: [167.802002, 369.765411]
+      Position: [167.802002, 318.923096]
       Size: [264.524994, 1]
     Com_VIBuffer:
       TexturePath: ..\..\Assets\UITexture\Hud\HpHud.png
