--- a/Assets/Scenes/m_pxVertices2.yaml
+++ b/Assets/Scenes/m_pxVertices2.yaml
@@ -142,8 +142,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [-3.88122892, 0.308779508, 0.522710443]
-      Rotation: [10.4349976, 40.8977585, 1.12951011e-06]
-      Scale: [0.801970899, 0.869501352, 0.861813605]
+      Rotation: [11.3099318, -0, 0]
+      Scale: [0.801858604, 0.869651139, 0.86173445]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -181,7 +181,7 @@ GameObjects:
     Com_Transform:
       Translation: [-3.45907974, 2.72718154e-07, 4.04530668]
       Rotation: [0, -0, -90]
-      Scale: [1, 1.10000002, 1.09867477]
+      Scale: [1, 1.10000002, 1.09867442]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Effect\
       MeshFileName: untitled.fbx
@@ -414,4 +414,59 @@ GameObjects:
       Level: 100
       Gold: 10
     RenderGroup: 3
+    FrustumRange: 1
+  - Name: O_Wolf
+    UUID: 16046188935930043936
+    Active: true
+    Layer: Layer_Monster
+    Instancing: false
+    Type: Object
+    PassIndex: 0
+    NumOBB: 2
+    Com_Transform:
+      Translation: [0, 0, 1.42391479]
+      Rotation: [0, -0, 0]
+      Scale: [1, 1, 1]
+    Com_Collider:
+      Center: [0, 0, 0]
+      Type: Capsule
+      Radius: 0.100000001
+      Height: 0.200000003
+      Angle:
+        - 0
+        - 0
+        - 0
+      RigidBody:
+        Enabled: true
+        Gravity: true
+        Kinematic: false
+        CharacterController: true
+    Com_OBB:
+      Center: [0, 0, 0]
+      Size: [0.5, 0.300000012, 0.300000012]
+      IsAttach: true
+      BoneName: Root
+      Offset: [0, 0.0900000036, 0]
+      CollisionType: 2
+    Com_OBB1:
+      Center: [0, 0, 0]
+      Size: [0.200000003, 0.200000003, 0.200000003]
+      IsAttach: true
+      BoneName: BN_Tongue_02
+      Offset: [0, 0, 0]
+      CollisionType: 3
+    Com_Model:
+      MeshFilePath: ..\..\Assets\Meshes\Monster\Wolf\
+      MeshFileName: Wolf.fbx
+      HasCollider: false
+      Equipment: false
+    Com_Stat:
+      Hp: [100, 0, 100, 100]
+      HpRegen: [0.100000001, 0.100000001]
+      Atk: [10, 0, 10]
+      Arm: [0, 0, 0]
+      Exp: [10, 100, 100]
+      Level: 1
+      Gold: 50
+    RenderGroup: 1
     FrustumRange: 1
